--- a/docs/src/app/docs/public-beaches/page.mdx
+++ b/docs/src/app/docs/public-beaches/page.mdx
@@ -9,7 +9,10 @@ This repo contains an node-wrapper for Umeå municipality's [public beaches API]
 ### Install dependencies
 
 ```bash
-pnpm add -D @kodverket/umea-public-beaches
+npm install -D @kodverket/umea-public-beaches
+```
+```bash /
+this is a random codeblockkkkkk
 ```
 
 </Steps>
