test: add random code block

--- a/docs/src/app/docs/public-beaches/page.mdx
+++ b/docs/src/app/docs/public-beaches/page.mdx
@@ -11,8 +11,9 @@ This repo contains an node-wrapper for Umeå municipality's [public beaches API]
 ```bash
 npm install -D @kodverket/umea-public-beaches
 ```
-```bash /
-this is a random codeblockkkkkk
+
+```bash
+this is a random code block
 ```
 
 </Steps>
