feat: add copy select menu (#32)
* misc: add deps

* wip: traverase unist tree...

* wip: add copy buttons

* feat: add unist types

* wip: rehypeNpmCommand

* fix: remove console log

* feat: add new icons

* feat: add dropdown-menu

* feat: add copy buttons with logic

* feat: only render code in code-block

* wip: test random commands

* test: add random code block

* fix: grug developer say complexity bad

* misc: format css

--- a/docs/src/app/docs/public-beaches/page.mdx
+++ b/docs/src/app/docs/public-beaches/page.mdx
@@ -9,7 +9,11 @@ This repo contains an node-wrapper for Umeå municipality's [public beaches API]
 ### Install dependencies
 
 ```bash
-pnpm add -D @kodverket/umea-public-beaches
+npm install -D @kodverket/umea-public-beaches
+```
+
+```bash
+this is a random code block
 ```
 
 </Steps>
