--- a/docs/src/app/docs/introduction/page.mdx
+++ b/docs/src/app/docs/introduction/page.mdx
@@ -31,4 +31,5 @@ If you have any questions or need assistance, don't hesitate to reach out to our
 
 [Get Started Now](getting-started)
 
+<Pager to={{href: "quick-start", label: "Quick start"}} />
 
