--- a/docs/src/app/docs/release/page.mdx
+++ b/docs/src/app/docs/release/page.mdx
@@ -8,4 +8,9 @@
 
 ## Canary Releases
 
-...
+something here
+
+<Pager 
+  back={{ href: "quick-start", label: "Quick start" }}
+  to={{href: "umea/introduction", label: "Umea Open API"}} 
+/>
