--- a/docs/src/app/docs/introduction/page.mdx
+++ b/docs/src/app/docs/introduction/page.mdx
@@ -6,28 +6,9 @@
 
 - **Simplified Access**: Our APIs provide a streamlined interface that abstracts away the intricacies of working with public APIs, allowing you to quickly integrate them into your projects.
 
-- **Accessibility**: We believe that using public APIs should be easy for developers of all experience levels. Our APIs come with clear documentation, code examples, and SDKs to facilitate a smooth integration process.
+- **Accessibility**: We believe that using public APIs should be easy for developers of all experience levels. Our APIs come with clear documentation and code examples.
 
-- **Type-Safety**: We prioritize type safety to help you catch errors early in the development process. Our wrappers and SDKs ensure that you work with well-defined data structures, reducing runtime issues and enhancing overall code quality.
-
-## Who Can Benefit
-
-Our open APIs are designed to cater to a diverse range of developers, including:
-
-- **Hackathon Enthusiasts**: Quickly prototype and build projects during hackathons without spending time on boilerplate code for API integration.
-
-- **Indie Developers**: Focus on the core features of your application and accelerate development by leveraging our simplified APIs.
-
-- **Startups**: Rapidly iterate on your minimum viable product (MVP) by leveraging our easy-to-use APIs and robust SDKs.
-
-- **Students**: Enhance your learning experience and bring your creative ideas to life. Our open APIs provide a valuable resource for students studying programming, web development, data science, and other related disciplines.
-
-## Getting Started
-
-
-We're thrilled to have you on board, and we can't wait to see what you'll create with our open APIs. Let's dive in and build something amazing together!
-
-If you have any questions or need assistance, don't hesitate to reach out to our support team or join our community forums.
+- **Type-Safety**: We prioritize type safety to help you catch errors early in the development process. Our wrappers ensure that you work with well-defined data structures, reducing runtime issues and enhancing overall code quality.
 
 [Get Started Now](getting-started)
 
